# Mohamed

./: .env.example  .gitignore  .hadolint.yaml  .yamllint.yaml  MANUAL_COMMANDS.txt  Makefile  README.md  docker-compose.dev.yml  generate_gui_pdf.py  generate_thesis_pdf.py  gru.sh  kill_sim.sh  pyproject.toml  rl.sh  sim_decisions.db
.github/workflows/: build.yml  lint.yml  smoke.yml  unit-tests.yml
3D_GUI_Sim_Results/sim002_20260502_182627_gru_scenario/: lstm_features.csv
3D_GUI_Sim_Results/sim003_20260503_020814_gru_scenario/: lstm_features.csv  summary.txt
3D_GUI_Sim_Results/sim004_20260503_051204_gru_scenario/: handover.csv  lstm_features.csv
3D_GUI_Sim_Results/sim005_20260503_072217_gru_scenario/: lstm_features.csv  summary.txt
3D_GUI_Sim_Results/sim006_20260503_121100_gru_scenario/: decision_log.csv  handover.csv  lstm_features.csv
3D_GUI_Sim_Results/sim007_20260505_031213_gru_scenario/: decision_log.csv  decision_summary.json  handover.csv  lstm_features.csv  summary.txt
3D_GUI_Sim_Results/sim008_20260505_042617_gru_scenario/: handover.csv  lstm_features.csv  summary.txt
3D_GUI_Sim_Results/sim009_20260505_073441_gru_scenario/: decision_log.csv  decision_summary.json  lstm_features.csv  summary.txt
3D_GUI_Sim_Results/sim010_20260506_024225_gru_scenario/: decision_summary.json  handover.csv
3D_GUI_Sim_Results/sim011_20260506_114846_gru_scenario/: handover.csv
3D_GUI_Sim_Results/sim014_20260507_151726_gru_scenario_gru/: handover.csv
3D_GUI_Sim_Results/sim015_20260507_225612_gru_scenario_rl/: decision_log.csv
5g-gui-v2/: controller.py  generate_gru_pdf.py  index.html  package-lock.json  vite.config.js
5g-gui-v2/src/: config.js  main.js  style.css
charts/oran/: .helmignore  Chart.yaml  values.yaml
docs/: CLOUD.md  MANUAL_COMMANDS.txt
docs/ADR/: 0001-multi-xapp-registry-pattern.md  0002-ns3-simulation-as-k8s-job.md  0003-single-flexric-image.md  0004-dual-mode-controller.md  0005-k8s-demo-mode.md  0006-path-portability-via-project-root.md  README.md
docs/demo/: 5g-realistic.html
docs/images/: cloud-architecture.mmd  local-k3d-architecture.mmd
docs/yousef-notes/: README.md
infra/azure/: cloud-init.yaml
load balancing/: SIMULATION_DOCUMENTATION.md  lb_influx_bridge.py  load_balancing_scenario.cc  save_lb_results.sh  xapp_es_with_cell_util (3)(1).c  xapp_lb.c
omar_salama/: rl_xapp.py  train_rl_ns3_v2.py
omar_salama/models/: rl_ns3_handover.pth
omar_salama/src/: env.py  run.py
platform/2d-gui/: docker-compose.yml
platform/controller/: .dockerignore  Dockerfile  controller.py  generate_gru_pdf.py  generate_plots.py  k8s_client.py  requirements.txt
platform/flexric/: KPI_FLOW_ES_WITH_CELL_UTIL.md  KPI_FLOW_REALISM_AND_FALLBACKS.md
platform/gui/: Dockerfile  index.html  nginx.conf.template  package.json
platform/ns3-sim/: .dockerignore  Dockerfile
sim-results/sim001_20260502_150932_gru_scenario/: summary.txt
sim-results/sim002_20260502_182627_gru_scenario/: handover.csv  summary.txt
sim-results/sim004_20260503_051204_gru_scenario/: summary.txt
sim-results/sim005_20260503_072217_gru_scenario/: .~lock.decision_log.csv#  decision_log.csv  (+2 more)
tools/: demo-runbook.sh  gru.sh  kill_sim.sh  launch_gru_system.sh  rl.sh  run-multi-scenario.sh  save_sim_results.sh  start.sh
yousef_fathy/: README.md  launch_lb_system.sh  live_lb_stats.py  save_lb_results.sh
yousef_fathy/flexric/examples/xApp/c/ctrl/: CMakeLists.txt  orange_energy_saving_with_LB.c  orange_handover.c
yousef_fathy/flexric/examples/xApp/c/handover_gru/: CMakeLists.txt  best2.c  lstm_predictor_client.c  lstm_predictor_client.h
yousef_fathy/flexric/examples/xApp/c/handover_rl/: CMakeLists.txt  best2_rl.c  rl_predictor_client.c  rl_predictor_client.h
yousef_fathy/flexric/examples/xApp/c/lb_awf/: CMakeLists.txt  xapp_lb_awf.c
(+220 files in other folders)
